--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --min-width: 375px;
+  --max-width: 1200px;
+}
+
+@layer components {
+  .flex_component {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns:
+      minmax(16px, 1fr)
+      minmax(var(--min-width), var(--max-width))
+      minmax(16px, 1fr);
+  }
+
+  .grid-content {
+    grid-column: 2 / 3;
+  }
+
+  .grid-content-full {
+    grid-column: 1 / -1;
+  }
+}
